--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -647,6 +647,18 @@
     <string name="language_label.kannada">ಕನ್ನಡ</string>
     <string name="language_label.malayalam">മലയാളം</string>
 
+    <string-array name="popup_language_list">
+        <item>English</item>
+        <item>हिंदी</item>
+        <item>मराठी</item>
+        <item>বাংলা</item>
+        <item>தமிழ்</item>
+        <item>తెలుగు</item>
+        <item>ಕನ್ನಡ</item>
+        <item>മലയാളം</item>
+        <item>ગુજરાતી</item>
+        <item>ਪੰਜਾਬੀ</item>
+    </string-array>
 
     <string name="choose_pref_lang">మీరు ప్రాధాన్యం ఇచ్చే భాషలను ఎంచుకోండి</string>
     <string name="choose_pref_lang.cancel">క్యాన్సల్</string>
@@ -667,6 +679,10 @@
     <string name="author_type.expert">నిపుణులు</string>
     <string name="author_type.featured">ప్రచురితమైన రచయితలు</string>
     <string name="author_type.user">యూజర్</string>
+    <string name="language_label.gujrati">ગુજરાતી </string>
+    <string name="cancel">Cancel</string>
+    <string name="language_label.punjabi">ਪੰਜਾਬੀ</string>
+
 
     <string name="no_article.be_first">Be the first one to write articles in this category!</string>
 
